# DeepGYM

./: .env.example  .gitignore  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: BUILD_AND_RELEASE.md  DATA_AND_MEDIA_LICENSE.md  PRODUCT_SPEC.md  SUPABASE_SETUP.md  TECHNICAL_ROUTES.md
prototype/: app.js  index.html
scripts/: build-companion-assets.py  check.mjs  dev-server.mjs
src/: App.tsx  AuthViews.tsx  CompanionViews.tsx  Root.tsx  TrainingHubViews.tsx  WorkoutViews.tsx  auth-service.ts  auth-types.ts  companion-catalog.ts  companion-growth.ts  companion-storage.ts  companion-types.ts  exercise-data.ts  main.tsx  profile-service.ts  profile-types.ts  styles.css  sync-service.ts  types.ts  workout-storage.ts  workout-summary.ts  workout-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_workouts.sql  0002_account_sync.sql  0003_training_hub.sql  0004_companions.sql  0005_repair_sync_triggers.sql
src-tauri/src/: lib.rs  main.rs
supabase/email-templates/: confirm-signup.html  recovery.html
supabase/functions/delete-account/: index.ts
supabase/migrations/: 202607210001_auth_sync.sql  202607220001_profiles_avatars.sql  202607220002_training_hub.sql  202607220003_companions.sql
