[package]
name = "deepgym"
version = "0.1.0"
description = "DeepGYM cross-platform workout guidance and tracking desktop app"
authors = ["DeepGYM"]
license = "Proprietary"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deepgym_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
